--- a/public/index.htm
+++ b/public/index.htm
@@ -35,6 +35,11 @@
 
       #list .item {
         text-align: left;
+        cursor: pointer;
+        -moz-user-select: none;
+        -khtml-user-select: none;
+        -webkit-user-select: none;
+        user-select: none;
       }
     </style>
   </head>
